# AutomaticBackgroundGenerator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
scripts/: bootstrap_vcpkg.sh  build.sh  run.sh  setup_macos.sh  setup_wsl_ubuntu.sh
src/: main.cpp
